# eci_ros

./: .gitignore
covvi_hand_driver/: package.xml  setup.py
covvi_hand_driver/covvi_hand_driver/: __init__.py  covvi_base_client_node.py  covvi_base_node.py  covvi_client_node.py  covvi_server_node.py  current_grip_msg_subscriber_node.py  digit_posn_all_msg_subscriber_node.py  digit_status_all_msg_subscriber_node.py  digit_touch_all_msg_subscriber_node.py  disable_all_realtime_cfg_client_node.py  electrode_value_msg_subscriber_node.py  enable_all_realtime_cfg_client_node.py  environmental_msg_subscriber_node.py  get_current_grip_client_node.py  get_device_identity_client_node.py  get_device_product_client_node.py  get_digit_config_client_node.py  get_digit_error_client_node.py  get_digit_posn_all_client_node.py  get_digit_posn_client_node.py  get_digit_status_all_client_node.py  get_digit_status_client_node.py  get_eci_connected_client_node.py  get_eci_device_class_type_client_node.py  get_eci_error_client_node.py  get_eci_manufacturer_i_d_client_node.py  get_eci_power_on_client_node.py  get_eci_product_i_d_client_node.py  get_eci_serial_number_client_node.py  get_environmental_client_node.py  get_firmware_p_i_c_e_c_i_client_node.py  get_firmware_p_i_c_h_a_n_d_client_node.py  get_grip_name_client_node.py  get_hand_connected_client_node.py  get_hand_device_class_type_client_node.py  get_hand_error_client_node.py  get_hand_manufacturer_i_d_client_node.py  get_hand_power_on_client_node.py  get_hand_product_i_d_client_node.py  get_hand_serial_number_client_node.py  (+26 more)
covvi_interfaces/: CMakeLists.txt  package.xml
covvi_interfaces/msg/: BaseControlMsg.msg  BaseMessage.msg  BuiltinGripID.msg  BulkDataType.msg  BulkMsg.msg  BulkRequestMsg.msg  BulkResponseMsg.msg  Command.msg  CommandCode.msg  CommandString.msg  ControlMsg.msg  CurrentGrip.msg  CurrentGripGripIdMsg.msg  CurrentGripID.msg  CurrentGripMsg.msg  CurrentGripTableMsg.msg  DeviceClass.msg  DeviceClassType.msg  DeviceColour.msg  DeviceGlove.msg  DeviceHandType.msg  DeviceIdentityMsg.msg  DeviceInfoMsg.msg  DeviceInputType.msg  DeviceOutputType.msg  DeviceProductMsg.msg  DeviceTestType.msg  Digit.msg  Digit5.msg  DigitConfigMsg.msg  DigitErrorMsg.msg  DigitMoveMsg.msg  DigitPosnAllMsg.msg  DigitPosnMsg.msg  DigitPosnSetMsg.msg  DigitStatusAllMsg.msg  DigitStatusMsg.msg  DigitTouchAllMsg.msg  DirectControlCommand.msg  DirectControlMsg.msg  (+42 more)
covvi_interfaces/srv/: DisableAllRealtimeCfg.srv  GetCurrentGrip.srv  GetDeviceIdentity.srv  GetDeviceProduct.srv  GetDigitConfig.srv  GetDigitError.srv  GetDigitPosn.srv  GetDigitPosnAll.srv  GetDigitStatus.srv  GetDigitStatusAll.srv  GetEnvironmental.srv  GetFirmwarePICECI.srv  GetFirmwarePICHAND.srv  GetGripName.srv  GetHello.srv  GetMotorCurrent.srv  GetMotorCurrentAll.srv  GetMotorLimits.srv  GetOrientation.srv  GetPinchConfig.srv  GetSystemStatus.srv  RemoveUserGrip.srv  ResetUserGrips.srv  SendUserGrip.srv  SetCurrentGrip.srv  SetDigitMove.srv  SetDigitPosn.srv  SetDigitPosnStop.srv  SetDirectControlOpen.srv  SetDirectControlStop.srv  SetHandPowerOff.srv  SetRealtimeCfg.srv
